# django_test_project

./: Makefile  README.md  docker-compose.yaml  pyproject.toml
django_test_project/: asgi.py  settings.py  urls.py  wsgi.py
foods/: admin.py  apps.py  models.py  urls.py  views.py
foods/migrations/: 0001_initial.py
